# datalink4tj-backend

./: .env  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  __init__.py  alembic.ini  entrypoint.py  install_and_run.ps1  main.py  nohup.out  poetry_setup.ps1  pyproject.toml  requirements.txt  reset_password.py  run.bat  run.py  start-backend.ps1  test_activity_record.py
alembic/: env.py
alembic/versions/: 0568601ca0dc_matworks.py  0a23b8e15b43_添加route_permissions表.py  18b470bceeb9_add_qa_s_customer.py  4575b3854e82_add_activity_table_if_not_exists.py  6516fea4d3f8_.py  75ecbec9a6db_initial_migration.py  7a88cb9e988a_创建被遗忘的rou_perms.py  8c7195fd55d7_.py  (+10 more)
apis/: __init__.py  activity.py  department.py  ehs.py  event.py  example.py  gmo.py  helpers.py  maint.py  maint_works.py  permission.py  qa.py  role.py  route.py  routes.py  user.py
app/: __init__.py
core/: config.py  logger.py
db/: database.py  init_data.py  init_db.py  init_routes.py  session.py
models/: __init__.py  activity.py  database.py  department.py  ehs.py  event.py  maint.py  pcl.py  permission.py  qa.py  role.py  route.py  route_permission.py  schema.py  user.py
schemas/: __init__.py  activity.py  department.py  ehs.py  event.py  maint_work.py  permission.py  qa.py  qa_kpi.py  qad.py  route.py  user.py
scripts/: fix_permissions.py  fix_role_permissions.py  fix_route_permissions.py  initialize_roles.py  simple_fix_permissions.py
services/: __init__.py  activity_service.py  department.py  ehs.py  init_service.py  maint_service.py  permission_service.py  route_service.py  user.py
(+3 files in other folders)
