[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "datalink4tj-backend"
version = "1.0.0"
description = "Datalink4TJ的后端API服务"
authors = ["Noahall <noahall127@outlook.com>"]
# 设置包含所有文件
include = ["**/*"]
packages = [
    { include = "." }
]

[tool.poetry.scripts]
start = "entrypoint:start"
dev = "entrypoint:dev"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.0"
alembic = "^1.11.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
pymysql = "^1.1.0"
mysqlclient = "^2.2.7"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.5"
cryptography = "^41.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"

[tool.black]
line-length = 88
target-version = ["py38"]
